# imu-rs

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  REFACTOR-PLAN.md  architecture-review.html  data.py  justfile
crates/imu-core/: Cargo.toml
crates/imu-core/src/: command.rs  error.rs  lib.rs  parser.rs  response.rs  types.rs
crates/imu-gui/: Cargo.toml
crates/imu-gui/src/: background.rs  config.rs  connection.rs  data.rs  main.rs  state.rs  types.rs
crates/imu-gui/src/ui/: config_panel.rs  device_panel.rs  mod.rs  visualization.rs
crates/imu-transport/: Cargo.toml
crates/imu-transport/src/: ble.rs  device.rs  lib.rs  mock.rs  serial.rs  transport.rs
plans/: ble-scan-optimization.md
